--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
-    "start": "webpack-dev-server",
+    "start": "cross-env INCLUDE_WEBPACK_HTML=true webpack-dev-server",
     "test": "npm run build"
   },
   "author": {
@@ -29,6 +29,8 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
+    "cross-env": "^5.1.3",
+    "html-webpack-plugin": "https://github.com/webpack-contrib/html-webpack-plugin/tarball/master",
     "webpack": "^4.0.0-beta.1",
     "webpack-cli": "^2.0.6",
     "webpack-dev-server": "^3.0.0-beta.1"
