--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
     "start": "cross-env INCLUDE_WEBPACK_HTML=true webpack-dev-server",
-    "test": "npm run build"
+    "test": "npm run build && bundlesize"
   },
+  "bundlesize": [
+    {
+      "path": "./dist/giphy-search-component.min.js",
+      "maxSize": "10 kB"
+    }
+  ],
   "author": {
     "name": "Ken Dale"
   },
@@ -29,6 +35,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
+    "bundlesize": "^0.16.0",
     "cross-env": "^5.1.3",
     "html-webpack-plugin": "https://github.com/webpack-contrib/html-webpack-plugin/tarball/master",
     "webpack": "^4.0.0-beta.1",
