--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   "author": {
     "name": "Ken Dale"
   },
+  "dependencies": {
+    "moment": "^2.20.1"
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
