--- a/.babelrc
+++ b/.babelrc
@@ -5,5 +5,13 @@
         "browsers": ["last 2 versions", "safari >= 7"]
       }
     }]
+  ],
+  "plugins": [
+    ["transform-runtime", {
+      "helpers": false,
+      "polyfill": false,
+      "regenerator": true,
+      "moduleName": "babel-runtime"
+    }]
   ]
 }
