Enable framework scenarios

--- a/.babelrc
+++ b/.babelrc
@@ -12,6 +12,7 @@
       "polyfill": false,
       "regenerator": true,
       "moduleName": "babel-runtime"
-    }]
+    }],
+    "add-module-exports"
   ]
 }
