--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
     "start": "cross-env INCLUDE_WEBPACK_HTML=true webpack-dev-server",
+    "start:sample:dynamic-import": "http-server ./samples/dynamic-import",
+    "start:sample:vanilla-js": "http-server ./samples/vanilla-js",
+    "start:sample:vue": "http-server ./samples/vue",
     "test": "npm run build && bundlesize"
   },
   "bundlesize": [
@@ -40,6 +43,7 @@
     "bundlesize": "^0.16.0",
     "cross-env": "^5.1.3",
     "html-webpack-plugin": "https://github.com/webpack-contrib/html-webpack-plugin/tarball/master",
+    "http-server": "^0.11.1",
     "webpack": "^4.0.0-beta.1",
     "webpack-cli": "^2.0.6",
     "webpack-dev-server": "^3.0.0-beta.1"
