--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
     "start": "cross-env INCLUDE_WEBPACK_HTML=true webpack-dev-server",
+    "start:sample:angular": "http-server ./samples/angular",
     "start:sample:dynamic-import": "http-server ./samples/dynamic-import",
     "start:sample:vanilla-js": "http-server ./samples/vanilla-js",
     "start:sample:vue": "http-server ./samples/vue",
