Add React sample

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "start": "cross-env INCLUDE_WEBPACK_HTML=true webpack-dev-server",
     "start:sample:angular": "http-server ./samples/angular",
     "start:sample:dynamic-import": "http-server ./samples/dynamic-import",
+    "start:sample:react": "http-server ./samples/react",
     "start:sample:vanilla-js": "http-server ./samples/vanilla-js",
     "start:sample:vue": "http-server ./samples/vue",
     "test": "npm run build && bundlesize"
