--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "url": "https://github.com/kendaleiv/giphy-search-component"
   },
   "scripts": {
+    "analyze": "cross-env INCLUDE_WEBPACK_VISUALIZER=true npm run build && opn stats.html",
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
     "start": "cross-env INCLUDE_WEBPACK_HTML=true webpack-dev-server",
@@ -48,8 +49,10 @@
     "cross-env": "^5.1.3",
     "html-webpack-plugin": "https://github.com/webpack-contrib/html-webpack-plugin/tarball/master",
     "http-server": "^0.11.1",
+    "opn-cli": "^3.1.0",
     "webpack": "^4.0.0-beta.1",
     "webpack-cli": "^2.0.6",
-    "webpack-dev-server": "^3.0.0-beta.1"
+    "webpack-dev-server": "^3.0.0-beta.1",
+    "webpack-visualizer-plugin": "^0.1.11"
   }
 }
