Use live-server

--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "analyze": "cross-env INCLUDE_WEBPACK_VISUALIZER=true npm run build && opn stats.html",
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
+    "serve": "live-server --port=8081",
     "start": "cross-env INCLUDE_WEBPACK_HTML=true webpack-dev-server",
-    "start:sample:angular": "http-server ./samples/angular",
-    "start:sample:angular-js": "http-server ./samples/angular-js",
-    "start:sample:dynamic-import": "http-server ./samples/dynamic-import",
-    "start:sample:react": "http-server ./samples/react",
-    "start:sample:vanilla-js": "http-server ./samples/vanilla-js",
-    "start:sample:vue": "http-server ./samples/vue",
-    "start:sample:webpack": "npm run build && cd samples/webpack && webpack --mode production && http-server",
+    "start:sample:angular": "npm run serve ./samples/angular",
+    "start:sample:angular-js": "npm run serve ./samples/angular-js",
+    "start:sample:dynamic-import": "npm run serve ./samples/dynamic-import",
+    "start:sample:react": "npm run serve ./samples/react",
+    "start:sample:vanilla-js": "npm run serve ./samples/vanilla-js",
+    "start:sample:vue": "npm run serve ./samples/vue",
+    "start:sample:webpack": "npm run build && cd samples/webpack && webpack --mode production && npm run serve ./samples/webpack",
     "test": "npm run build && bundlesize"
   },
   "bundlesize": [
@@ -48,7 +49,7 @@
     "bundlesize": "^0.16.0",
     "cross-env": "^5.1.3",
     "html-webpack-plugin": "https://github.com/webpack-contrib/html-webpack-plugin/tarball/master",
-    "http-server": "^0.11.1",
+    "live-server": "^1.2.0",
     "opn-cli": "^3.1.0",
     "webpack": "^4.0.0-beta.1",
     "webpack-cli": "^2.0.6",
