--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
     "html-webpack-plugin": "https://github.com/webpack-contrib/html-webpack-plugin/tarball/master",
     "live-server": "^1.2.0",
     "opn-cli": "^3.1.0",
-    "webpack": "^4.0.0-beta.1",
-    "webpack-cli": "^2.0.6",
-    "webpack-dev-server": "^3.0.0-beta.1",
+    "webpack": "^4.0.0",
+    "webpack-cli": "^2.0.9",
+    "webpack-dev-server": "^3.0.0",
     "webpack-visualizer-plugin": "^0.1.11"
   }
 }
